--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.zia.circlechart.MainActivity"
-    android:gravity="center">
+    android:gravity="center"
+    android:orientation="vertical">
+    <Button
+        android:text="自己动"
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"/>
 
     <com.zia.circlechart.CircleChart
         android:id="@+id/chart"
