--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     tools:context="com.zia.circlechart.MainActivity"
     android:gravity="center"
     android:orientation="vertical">
@@ -16,7 +17,7 @@
 
     <com.zia.circlechart.CircleChart
         android:id="@+id/chart"
-        android:layout_width="300dp"
-        android:layout_height="300dp" />
+        android:layout_width="250dp"
+        android:layout_height="250dp" />
 
 </LinearLayout>
